Added database + fixed each pages for final release